feat: improve Question Bank UI/UX and add sidebar expand/collapse
Question Bank improvements:
- Add question count and tag count stats to pool list
- Improve empty state with actionable CTA buttons
- Add breadcrumb navigation
- Add 'Create Pool' button with inline form
- Enhance file input with drag & drop and file preview
- Add link to docs/import.md
- Update API to return pool statistics

Sidebar improvements:
- Add expand/collapse functionality with click-to-toggle
- Click anywhere on sidebar background to toggle
- Persist sidebar state in localStorage
- Smooth 300ms transition animation
- Icon-only mode when collapsed (64px)
- Full menu mode when expanded (256px)
- Fix accessibility with keyboard handlers

Dashboard improvements:
- Refactor to pure overview (Option A)
- Remove ClassroomPanel, add Recent Classes summary
- Add Quick Access sidebar with Classes link
- Update descriptions and labels

Classes management:
- Add complete classes list and detail pages
- Add API endpoints for class details, members, sessions
- Add Classes link to sidebar navigation

Bug fixes:
- Fix Prisma groupBy for tag counting (replace distinct)
- Fix ESLint errors (arrow function parentheses, indentation)
- Fix React useEffect setState warning (use lazy initialization)
- Fix ternary expression formatting

--- a/bkquiz-web/src/locales/en.json
+++ b/bkquiz-web/src/locales/en.json
@@ -69,6 +69,7 @@
   },
   "DashboardLayout": {
     "dashboard_link": "Dashboard",
+    "classes_link": "Classes",
     "quizzes_link": "Quizzes",
     "question_bank_link": "Question bank",
     "user_profile_link": "Manage your account",
