feat: add i18n support for Dashboard page (TeacherDashboard and StudentDashboard)
- Add comprehensive translation keys for Dashboard.teacher and Dashboard.student namespaces
- Update TeacherDashboard to use getTranslations with locale parameter
- Update StudentDashboard to use getTranslations with locale parameter
- Replace all hardcoded Vietnamese and English text with i18n translations
- Fix JSON syntax errors in translation files
- Pass locale prop from dashboard page to child components
- Ensure dashboard text changes when language is switched

--- a/bkquiz-web/src/locales/en.json
+++ b/bkquiz-web/src/locales/en.json
@@ -80,7 +80,92 @@
   "Dashboard": {
     "meta_title": "Dashboard",
     "hello_message": "Hello {email}!",
-    "alternative_message": "Need advanced features? Multi-tenancy & Teams, Roles & Permissions, Shadcn UI, End-to-End Typesafety with oRPC, Stripe Payment, Light / Dark mode. Try <url></url>."
+    "alternative_message": "Need advanced features? Multi-tenancy & Teams, Roles & Permissions, Shadcn UI, End-to-End Typesafety with oRPC, Stripe Payment, Light / Dark mode. Try <url></url>.",
+    "teacher": {
+      "header_subtitle": "BKquiz Dashboard",
+      "header_title": "Overview",
+      "header_description": "Overview and quick access to your resources.",
+      "manage_classes": "Manage Classes",
+      "manage_quizzes": "Manage Quizzes",
+      "question_bank": "Question Bank",
+      "quick_actions": "Quick Actions",
+      "create_class": "+ Create Class",
+      "create_quiz": "+ Create Quiz",
+      "import_pool": "+ Import Pool",
+      "classes_label": "Classes",
+      "classes_description": "Number of classes you are managing.",
+      "quizzes_label": "Quizzes",
+      "quizzes_description": "Total quizzes you have created.",
+      "active_sessions_label": "Active sessions",
+      "active_sessions_description": "Sessions currently running (status=active).",
+      "recent_classes_title": "Recent Classes",
+      "recent_classes_description": "Classes you are managing. Click to view details.",
+      "view_all": "View all",
+      "no_classes_yet": "No classes yet.",
+      "create_first_class": "Create your first class",
+      "active_sessions_widget_title": "Active Sessions",
+      "no_sessions_running": "No sessions running.",
+      "students": "students",
+      "view_all_sessions": "View all ({count})",
+      "quiz_status_title": "Quiz Status",
+      "draft": "Draft",
+      "published": "Published",
+      "no_rules": "No rules",
+      "getting_started": "Getting started",
+      "getting_started_step1": "Create your first class in",
+      "getting_started_step2": "Import or create",
+      "question_pool": "question pool",
+      "in": "in",
+      "QuestionBank": "Question Bank",
+      "getting_started_step3": "Create",
+      "quiz": "quiz",
+      "for_each_class_and_configure": "for each class and configure",
+      "rules": "rules",
+      "by_tag_pool": "by tag/pool.",
+      "getting_started_step4": "Go to",
+      "Sessions": "Sessions",
+      "to": "to",
+      "start_session": "start session",
+      "and_display": "and display",
+      "Teacher_Screen": "Teacher Screen",
+      "for_students": "for students."
+    },
+    "student": {
+      "header_subtitle": "BKquiz Dashboard",
+      "header_title": "Overview",
+      "header_description": "View classes you joined and track ongoing sessions.",
+      "view_my_sessions": "View my sessions",
+      "classes_label": "Classes",
+      "classes_description": "Number of classes you are joining.",
+      "my_active_sessions_label": "My Active Sessions",
+      "my_active_sessions_description": "Sessions you are participating in.",
+      "my_attempts_label": "My Attempts",
+      "my_attempts_description": "Total attempts you have made.",
+      "active_sessions_title": "Currently taking ({count})",
+      "started_at": "Started:",
+      "continue": "Continue →",
+      "my_classes_title": "My Classes",
+      "my_classes_description": "Classes you are joining. Click to view details.",
+      "view_all": "View all",
+      "no_classes_yet": "No classes yet.",
+      "join_class": "Join class",
+      "performance_title": "Performance",
+      "average_score": "Average score",
+      "highest_score": "Highest score",
+      "view_details": "View details →",
+      "no_scores_yet": "No scores yet.",
+      "take_quiz_now": "Take quiz now",
+      "upcoming_sessions_title": "Waiting to start ({count})",
+      "created_at": "Created:",
+      "view_lobby": "View lobby",
+      "getting_started": "Getting started",
+      "getting_started_step1": "Join a class using",
+      "class_code": "class code",
+      "getting_started_step2": "View",
+      "ongoing_sessions": "ongoing sessions",
+      "getting_started_step3": "Join session and take quiz as instructed by teacher.",
+      "getting_started_step4": "View results and scores after submission."
+    }
   },
   "UserProfile": {
     "meta_title": "User Profile"
@@ -113,17 +198,6 @@
     "meta_title": "Classes",
     "my_classes": "My Classes",
     "classes_count": "{count} classes",
-    "breadcrumb_dashboard": "Dashboard"
-  },
-  "Sessions": {
-    "meta_title": "My Sessions",
-    "title": "My Sessions",
-    "breadcrumb_dashboard": "Dashboard"
-  },
-  "Classes": {
-    "meta_title": "Classes",
-    "my_classes": "My Classes",
-    "classes_count": "{count} classes",
     "breadcrumb_dashboard": "Dashboard",
     "manage_your_classes": "Manage your classes",
     "classes_you_joined": "Classes you joined",
@@ -140,6 +214,11 @@
     "please_enter_class_name": "Please enter class name",
     "class_created_success": "Class created successfully",
     "class_joined_success": "Class joined successfully"
+  },
+  "Sessions": {
+    "meta_title": "My Sessions",
+    "title": "My Sessions",
+    "breadcrumb_dashboard": "Dashboard"
   },
   "Attempt": {
     "submit_success": "Submitted. Score: {score} (correct {correctCount}/{totalQuestions})",
