--- a/bkquiz-web/src/locales/vi.json
+++ b/bkquiz-web/src/locales/vi.json
@@ -80,7 +80,92 @@
   "Dashboard": {
     "meta_title": "Bảng điều khiển",
     "hello_message": "Xin chào {email}!",
-    "alternative_message": "Cần các tính năng nâng cao? Đa tenant & Teams, Vai trò & Quyền, Shadcn UI, Type safety từ đầu đến cuối với oRPC, Thanh toán Stripe, Chế độ sáng / tối. Hãy thử <url></url>."
+    "alternative_message": "Cần các tính năng nâng cao? Đa tenant & Teams, Vai trò & Quyền, Shadcn UI, Type safety từ đầu đến cuối với oRPC, Thanh toán Stripe, Chế độ sáng / tối. Hãy thử <url></url>.",
+    "teacher": {
+      "header_subtitle": "BKquiz Dashboard",
+      "header_title": "Tổng quan",
+      "header_description": "Tổng quan và quick access đến các tài nguyên của bạn.",
+      "manage_classes": "Quản lý Classes",
+      "manage_quizzes": "Quản lý Quizzes",
+      "question_bank": "Question Bank",
+      "quick_actions": "Quick Actions",
+      "create_class": "+ Tạo Class",
+      "create_quiz": "+ Tạo Quiz",
+      "import_pool": "+ Import Pool",
+      "classes_label": "Classes",
+      "classes_description": "Số lớp bạn đang quản lý.",
+      "quizzes_label": "Quizzes",
+      "quizzes_description": "Tổng quiz bạn đã tạo.",
+      "active_sessions_label": "Active sessions",
+      "active_sessions_description": "Sessions đang chạy (status=active).",
+      "recent_classes_title": "Recent Classes",
+      "recent_classes_description": "Các lớp bạn đang quản lý. Click để xem chi tiết.",
+      "view_all": "Xem tất cả",
+      "no_classes_yet": "Chưa có lớp nào.",
+      "create_first_class": "Tạo lớp đầu tiên",
+      "active_sessions_widget_title": "Active Sessions",
+      "no_sessions_running": "Không có session nào đang chạy.",
+      "students": "students",
+      "view_all_sessions": "Xem tất cả ({count})",
+      "quiz_status_title": "Quiz Status",
+      "draft": "Draft",
+      "published": "Published",
+      "no_rules": "Chưa có rules",
+      "getting_started": "Getting started",
+      "getting_started_step1": "Tạo lớp đầu tiên của bạn trong",
+      "getting_started_step2": "Import hoặc tạo",
+      "question_pool": "question pool",
+      "in": "trong",
+      "QuestionBank": "Question Bank",
+      "getting_started_step3": "Tạo",
+      "quiz": "quiz",
+      "for_each_class_and_configure": "cho từng lớp và cấu hình",
+      "rules": "rules",
+      "by_tag_pool": "theo tag/pool.",
+      "getting_started_step4": "Vào",
+      "Sessions": "Sessions",
+      "to": "để",
+      "start_session": "start session",
+      "and_display": "và chiếu",
+      "Teacher_Screen": "Teacher Screen",
+      "for_students": "cho sinh viên."
+    },
+    "student": {
+      "header_subtitle": "BKquiz Dashboard",
+      "header_title": "Tổng quan",
+      "header_description": "Xem các lớp bạn tham gia và theo dõi các session đang diễn ra.",
+      "view_my_sessions": "Xem các session của bạn",
+      "classes_label": "Classes",
+      "classes_description": "Số lớp bạn đang tham gia.",
+      "my_active_sessions_label": "My Active Sessions",
+      "my_active_sessions_description": "Sessions bạn đang tham gia.",
+      "my_attempts_label": "My Attempts",
+      "my_attempts_description": "Tổng số bài bạn đã làm.",
+      "active_sessions_title": "Đang làm bài ({count})",
+      "started_at": "Bắt đầu:",
+      "continue": "Tiếp tục →",
+      "my_classes_title": "My Classes",
+      "my_classes_description": "Các lớp bạn đang tham gia. Click để xem chi tiết.",
+      "view_all": "Xem tất cả",
+      "no_classes_yet": "Chưa có lớp nào.",
+      "join_class": "Join lớp",
+      "performance_title": "Performance",
+      "average_score": "Điểm trung bình",
+      "highest_score": "Điểm cao nhất",
+      "view_details": "Xem chi tiết →",
+      "no_scores_yet": "Chưa có điểm số.",
+      "take_quiz_now": "Làm bài ngay",
+      "upcoming_sessions_title": "Chờ bắt đầu ({count})",
+      "created_at": "Tạo lúc:",
+      "view_lobby": "Xem lobby",
+      "getting_started": "Getting started",
+      "getting_started_step1": "Tham gia lớp học bằng",
+      "class_code": "class code",
+      "getting_started_step2": "Xem các",
+      "ongoing_sessions": "session đang diễn ra",
+      "getting_started_step3": "Join session và làm bài quiz theo hướng dẫn của giáo viên.",
+      "getting_started_step4": "Xem kết quả và điểm số sau khi nộp bài."
+    }
   },
   "UserProfile": {
     "meta_title": "Hồ sơ người dùng"
@@ -113,17 +198,6 @@
     "meta_title": "Lớp học",
     "my_classes": "Lớp của tôi",
     "classes_count": "{count} lớp",
-    "breadcrumb_dashboard": "Bảng điều khiển"
-  },
-  "Sessions": {
-    "meta_title": "Phiên của tôi",
-    "title": "Phiên của tôi",
-    "breadcrumb_dashboard": "Bảng điều khiển"
-  },
-  "Classes": {
-    "meta_title": "Lớp học",
-    "my_classes": "Lớp của tôi",
-    "classes_count": "{count} lớp",
     "breadcrumb_dashboard": "Bảng điều khiển",
     "manage_your_classes": "Quản lý các lớp học của bạn",
     "classes_you_joined": "Các lớp bạn đang tham gia",
@@ -140,6 +214,11 @@
     "please_enter_class_name": "Vui lòng nhập tên lớp",
     "class_created_success": "Đã tạo lớp thành công",
     "class_joined_success": "Đã join lớp thành công"
+  },
+  "Sessions": {
+    "meta_title": "Phiên của tôi",
+    "title": "Phiên của tôi",
+    "breadcrumb_dashboard": "Bảng điều khiển"
   },
   "Attempt": {
     "submit_success": "Đã submit. Score: {score} (đúng {correctCount}/{totalQuestions})",
