feat: add i18n support for QuestionBankPanel
- Add translation keys for pool creation, import, and management
- Replace all hardcoded text with i18n translations
- All question bank operations now support language switching

--- a/bkquiz-web/src/locales/en.json
+++ b/bkquiz-web/src/locales/en.json
@@ -213,7 +213,24 @@
     "meta_title": "Question bank",
     "title": "Question Bank",
     "description": "Manage question pools and quickly import questions from Markdown/ZIP.",
-    "breadcrumb_dashboard": "Dashboard"
+    "breadcrumb_dashboard": "Dashboard",
+    "create_new_pool": "Create new pool",
+    "cancel": "Cancel",
+    "pool_name_placeholder": "Pool name...",
+    "creating": "Creating...",
+    "create": "Create",
+    "import_from_markdown_zip": "Import from Markdown/ZIP",
+    "view_guide": "View guide →",
+    "remove_file": "Remove file",
+    "drag_drop_or_click": "Drag and drop file here or click to select",
+    "supported_files": "Supported files",
+    "md_or_zip": ".md or .zip",
+    "importing": "Importing...",
+    "import": "Import",
+    "your_pools": "Your pools",
+    "pools": "pools",
+    "no_pools_yet": "No question pools yet.",
+    "get_started_hint": "Get started by importing from Markdown/ZIP or creating a new pool."
   },
   "Classes": {
     "meta_title": "Classes",
