--- a/bkquiz-web/src/locales/vi.json
+++ b/bkquiz-web/src/locales/vi.json
@@ -213,7 +213,24 @@
     "meta_title": "Ngân hàng câu hỏi",
     "title": "Ngân hàng câu hỏi",
     "description": "Quản lý question pools và import nhanh câu hỏi từ Markdown/ZIP.",
-    "breadcrumb_dashboard": "Bảng điều khiển"
+    "breadcrumb_dashboard": "Bảng điều khiển",
+    "create_new_pool": "Tạo pool mới",
+    "cancel": "Hủy",
+    "pool_name_placeholder": "Tên pool...",
+    "creating": "Đang tạo...",
+    "create": "Tạo",
+    "import_from_markdown_zip": "Import từ Markdown/ZIP",
+    "view_guide": "Xem hướng dẫn →",
+    "remove_file": "Xóa file",
+    "drag_drop_or_click": "Kéo thả file vào đây hoặc click để chọn",
+    "supported_files": "Hỗ trợ file",
+    "md_or_zip": ".md hoặc .zip",
+    "importing": "Đang import...",
+    "import": "Import",
+    "your_pools": "Pools của bạn",
+    "pools": "pools",
+    "no_pools_yet": "Chưa có question pool nào.",
+    "get_started_hint": "Bắt đầu bằng cách import từ Markdown/ZIP hoặc tạo pool mới."
   },
   "Classes": {
     "meta_title": "Lớp học",
