feat: add comprehensive i18n support for Attempt page (studentAttempt.tsx)
- Add extensive translation keys for all attempt-related text
- Replace all hardcoded Vietnamese and English text with i18n translations
- Support language switching for:
  - Question navigation and status
  - Submit confirmation modal
  - Checkpoint token verification
  - Review mode messages
  - Time warnings and status messages
- All attempt page text now supports language switching

--- a/bkquiz-web/src/locales/en.json
+++ b/bkquiz-web/src/locales/en.json
@@ -260,6 +260,55 @@
   },
   "Attempt": {
     "submit_success": "Submitted. Score: {score} (correct {correctCount}/{totalQuestions})",
-    "submit_failed": "Submit failed"
+    "submit_failed": "Submit failed",
+    "waiting_for_teacher": "Waiting for teacher to start",
+    "can_review_questions_hint": "You can review the questions. Time will start counting when the teacher starts the session.",
+    "completed": "Completed",
+    "your_score": "Your score",
+    "cannot_review_yet": "Cannot review detailed answers yet",
+    "session_not_ended": "Session has not ended. Please wait for the session to end.",
+    "review_window_closed": "Review window has closed. The time to review detailed answers has ended.",
+    "review_window_countdown": "⏳ {minutes} minutes left to review detailed answers. The window will close after that.",
+    "review_not_allowed": "Teacher does not allow reviewing detailed answers.",
+    "question": "Question",
+    "select_one": "Select 1",
+    "select_multiple": "Select multiple",
+    "score": "Score:",
+    "correct": "✓ Correct",
+    "submitted": "✓ Submitted",
+    "not_submitted": "Not submitted",
+    "autosave_enabled": "Autosave enabled: saves locally immediately, syncs when online.",
+    "previous": "Previous",
+    "next": "Next",
+    "submit_this_question": "Submit this question",
+    "token": "Token",
+    "verifying": "Verifying...",
+    "verify": "Verify",
+    "confirm_submit": "Confirm submit",
+    "cancel": "Cancel",
+    "submitting": "Submitting...",
+    "no_questions_in_session": "No questions in session (need to configure quiz rules + Start session to snapshot).",
+    "checkpoint_enter_token": "Checkpoint: Enter token to continue",
+    "offline_please_online": "You are offline. Please go online to verify token.",
+    "locked_due_to_failures": "You are locked due to too many failed attempts.",
+    "token_due": "Token verification is due.",
+    "enter_token_from_teacher_screen": "Enter token from teacher screen",
+    "wrong": "Wrong:",
+    "cooldown_30s": " · cooldown 30s",
+    "total_questions": "Total questions:",
+    "answered": "Answered:",
+    "not_answered": "Not answered:",
+    "unanswered_warning": "You still have {count} unanswered questions. Are you sure you want to submit?",
+    "time_up_auto_submit": "⏰ Time is up! Your attempt will be automatically submitted.",
+    "time_up_message": "Time is up.",
+    "submit_hint": "Only submit when online, no pending sync, and not blocked by checkpoint.",
+    "review_mode": "Submitted - Review mode",
+    "answered_label": "Answered",
+    "not_answered_label": "Not answered",
+    "current_question": "Current",
+    "question_status_aria": "Question {number}: {status}",
+    "time_remaining": "Time remaining:",
+    "question_list": "Question list",
+    "sync_error": "Sync error:"
   }
 }
