--- a/bkquiz-web/src/locales/vi.json
+++ b/bkquiz-web/src/locales/vi.json
@@ -260,6 +260,55 @@
   },
   "Attempt": {
     "submit_success": "Đã submit. Score: {score} (đúng {correctCount}/{totalQuestions})",
-    "submit_failed": "Submit thất bại"
+    "submit_failed": "Submit thất bại",
+    "waiting_for_teacher": "Đang chờ giảng viên bắt đầu",
+    "can_review_questions_hint": "Bạn có thể xem lại các câu hỏi. Thời gian sẽ bắt đầu tính khi giảng viên bắt đầu session.",
+    "completed": "Đã hoàn thành bài làm",
+    "your_score": "Điểm số của bạn",
+    "cannot_review_yet": "⏳ Chưa thể xem đáp án chi tiết",
+    "session_not_ended": "Session chưa kết thúc. Vui lòng đợi session kết thúc.",
+    "review_window_closed": "⏰ Đã hết thời gian xem lại đáp án chi tiết. Cửa sổ xem lại đã đóng.",
+    "review_window_countdown": "⏳ Còn {minutes} phút để xem lại đáp án chi tiết. Sau đó cửa sổ sẽ đóng.",
+    "review_not_allowed": "Giảng viên không cho phép xem lại đáp án chi tiết.",
+    "question": "Câu",
+    "select_one": "Chọn 1",
+    "select_multiple": "Chọn nhiều",
+    "score": "Điểm:",
+    "correct": "✓ Đúng",
+    "submitted": "✓ Đã submit",
+    "not_submitted": "Chưa submit",
+    "autosave_enabled": "Autosave bật: lưu local ngay lập tức, sync khi online.",
+    "previous": "Trước",
+    "next": "Sau",
+    "submit_this_question": "Submit câu này",
+    "token": "Token",
+    "verifying": "Đang verify...",
+    "verify": "Verify",
+    "confirm_submit": "Xác nhận nộp bài",
+    "cancel": "Hủy",
+    "submitting": "Đang submit...",
+    "no_questions_in_session": "Chưa có câu hỏi trong session (cần cấu hình quiz rules + Start session để snapshot).",
+    "checkpoint_enter_token": "Checkpoint: Nhập token để tiếp tục",
+    "offline_please_online": "Bạn đang offline. Vui lòng online lại để verify token.",
+    "locked_due_to_failures": "Bạn đang bị lock do nhập sai nhiều lần.",
+    "token_due": "Đến hạn verify token.",
+    "enter_token_from_teacher_screen": "Nhập token từ màn hình giáo viên",
+    "wrong": "Sai:",
+    "cooldown_30s": " · đang cooldown 30s",
+    "total_questions": "Tổng số câu:",
+    "answered": "Đã trả lời:",
+    "not_answered": "Chưa trả lời:",
+    "unanswered_warning": "Bạn còn {count} câu chưa trả lời. Bạn có chắc muốn nộp bài?",
+    "time_up_auto_submit": "⏰ Hết thời gian làm bài! Bài làm của bạn sẽ được tự động submit.",
+    "time_up_message": "Đã hết thời gian làm bài.",
+    "submit_hint": "Chỉ submit khi online, không pending sync, và không bị checkpoint block.",
+    "review_mode": "Đã nộp bài - Chế độ xem lại",
+    "answered_label": "Đã trả lời",
+    "not_answered_label": "Chưa trả lời",
+    "current_question": "Đang xem",
+    "question_status_aria": "Câu {number}: {status}",
+    "time_remaining": "Còn lại:",
+    "question_list": "Danh sách câu hỏi",
+    "sync_error": "Sync lỗi:"
   }
 }
